Modified code in class and committed

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,46 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>0</td> <td title="&gt;&gt;TestAnnotationSequence.beforeSuite()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>20</td> <td>&nbsp;</td><td title="&gt;&gt;TestAnnotationSequence.beforeTest()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotationSequence.beforeClass()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotationSequence.beforeMethod()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotationSequence.drive()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">drive</td> 
-  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotationSequence.afterMethod()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotationSequence.beforeMethod()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotationSequence.drifting()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">drifting</td> 
-  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotationSequence.afterMethod()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotationSequence.beforeMethod()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotationSequence.onMaxSpeed()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">onMaxSpeed</td> 
-  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>49</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotationSequence.afterMethod()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>67</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotationSequence.beforeMethod()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>67</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotationSequence.changeGear()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">changeGear</td> 
-  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>71</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotationSequence.afterMethod()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>72</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotationSequence.beforeMethod()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>72</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotationSequence.accelerate()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">accelerate</td> 
-  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>74</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotationSequence.afterMethod()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>74</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotationSequence.afterClass()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>74</td> <td>&nbsp;</td><td title="&lt;&lt;TestAnnotationSequence.afterTest()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
-<tr bgcolor="696aa4">  <td>16/02/14 09:52:49</td>   <td>141</td> <td title="&lt;&lt;TestAnnotationSequence.afterSuite()[pri:0, instance:com.parallel.execution.TestAnnotationSequence@2cfb4a64]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1289479439</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>0</td> <td title="&gt;&gt;TestAnnotationSequence.beforeSuite()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>10</td> <td>&nbsp;</td><td title="&gt;&gt;TestAnnotationSequence.beforeTest()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotationSequence.beforeClass()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotationSequence.beforeMethod()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotationSequence.f4()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">f4</td> 
+  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotationSequence.afterMethod()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotationSequence.beforeMethod()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotationSequence.f1()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">f1</td> 
+  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotationSequence.afterMethod()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAnnotationSequence.beforeMethod()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotationSequence.f3()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">f3</td> 
+  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotationSequence.afterMethod()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAnnotationSequence.afterClass()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>38</td> <td>&nbsp;</td><td title="&lt;&lt;TestAnnotationSequence.afterTest()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@804581391</td>   <td></td> </tr>
+<tr bgcolor="a277bd">  <td>16/06/26 23:24:08</td>   <td>84</td> <td title="&lt;&lt;TestAnnotationSequence.afterSuite()[pri:0, instance:com.junit.module7.TestAnnotationSequence@71f2a7d5]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@804581391</td>   <td></td> </tr>
 </table>
