--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,35 +4,27 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.parallel.execution.TestAnnotationSequence</td>
+<td>com.junit.module7.TestAnnotationSequence</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>onMaxSpeed</td>
+<td>f1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>drifting</td>
-<td>Bike </td>
-</tr>
+<td>f2</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>changeGear</td>
-<td>Car Bike </td>
-</tr>
+<td>f3</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>accelerate</td>
-<td>Car Bike </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>drive</td>
-<td>Car Bike </td>
-</tr>
+<td>f4</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
